# wallsd

./: .gitignore  Cargo.toml  LICENSE.md  README.md
scripts/: busctl-send-server.sh  busctl-test-message.sh  busctl-wrap.sh
src/: arg_parser.rs  build_info.rs  collection.rs  command.rs  config.rs  dbus_server.rs  executor.rs  image_verification.rs  logging.rs  main.rs  mode.rs  on_calendar.rs  output.rs  output_settings.rs  profiler.rs  resolution.rs  state.rs  status.rs  swaymsg.rs  swww.rs  swww_query.rs  systemd_analyze.rs
