[package]
name = "wallsd"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.35"
event-listener = "5.2.0"
futures = "0.3.30"
json = "0.12.4"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zbus = "4.1.2"
zvariant = "4.0.2"
