[package]
name = "wallsd"
version = "0.1.0"
description = "A daemon to control wallpaper settings"
authors = ["Jeremy M. Reed <reeje76@gmail.com>"]
publish = false
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
shadow-rs = "0.27.1"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.35"
clap = { version = "4.5.4", features = ["cargo"] }
confy = "0.6.1"
event-listener = "5.2.0"
futures = "0.3.30"
image = { version = "0.25.1", features = ["webp"] }
json = "0.12.4"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
shadow-rs = "0.27.1"
shellexpand = "3.1.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
zbus = "4.1.2"
zvariant = "4.0.2"
